# ccdi

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  readme.txt
ccdi-common/: Cargo.toml
ccdi-common/src/: helpers.rs  lib.rs  logger.rs
ccdi-common/src/file/: mod.rs
ccdi-common/src/image/: binary.rs  grid.rs  lookup.rs  mod.rs  rgb.rs  scale_fast.rs
ccdi-common/src/messages/: client.rs  common.rs  gui_config.rs  io.rs  mod.rs  process.rs  state.rs  storage.rs
ccdi-driver-moravian/: Cargo.toml  build.rs
ccdi-driver-moravian/src/: image.rs  lib.c  lib.rs  read.rs  read_mode.rs
ccdi-image/: Cargo.toml
ccdi-image/src/: lib.rs  plot.rs  raw_to_bmp.rs  raw_to_jpeg.rs  stats.rs
ccdi-imager-demo/: Cargo.toml
ccdi-imager-demo/src/: lib.rs
ccdi-imager-interface/: Cargo.toml
ccdi-imager-interface/src/: lib.rs
ccdi-imager-moravian/: Cargo.toml
ccdi-imager-moravian/src/: lib.rs
ccdi-logic/: Cargo.toml
ccdi-logic/src/: camera.rs  config.rs  lib.rs  state.rs  thread.rs
ccdi-logic/src/camera/: command.rs  connected.rs  exposure.rs  mod.rs  properties.rs
ccdi-logic/src/config/: gui.rs  mod.rs
ccdi-logic/src/convert/: mod.rs
ccdi-logic/src/io/: led_output.rs  mod.rs
ccdi-logic/src/storage/: mod.rs  save.rs
ccdi-test/: Cargo.toml
ccdi-test-driver-moravian/: Cargo.toml
ccdi-test-driver-moravian/src/: main.rs
ccdi-test-gpio/: Cargo.toml
ccdi-test-gpio/src/: main.rs
ccdi-test/src/: main.rs
ccdi-tool-enhance-oiii/: Cargo.toml
ccdi-tool-enhance-oiii/src/: fits.rs  logger.rs  main.rs
ccdi-tool-timestamps/: Cargo.toml
ccdi-tool-timestamps/src/: main.rs
ccdi-web-client/: Cargo.toml  index.html  index.scss
ccdi-web-client/src/: camera.rs  composition.rs  connection.rs  gain.rs  main.rs  menu.rs  picture.rs  rendering.rs  status_bar.rs  time.rs
ccdi-web-client/src/components/: camera.rs  composition.rs  footer.rs  menu.rs  mod.rs  rendering.rs  shooting_details.rs  status_bar.rs  system.rs  text_input.rs  time.rs
ccdi-web-client/src/selectors/: composition.rs  cooling.rs  float.rs  gain.rs  mod.rs  picture.rs  shooting.rs
ccdi-web-service/: Cargo.toml  copy-client-binaries.sh  update-symlinks.sh
ccdi-web-service/src/: bridge.rs  config.rs  logger.rs  main.rs  server.rs  static_files.rs  websocket.rs
ccdi-web-service/src/static/: ccdi-web-client.css  ccdi-web-client.js  ccdi-web-client.wasm  index.html
doc/: config.yaml  raspi-setup.md
doc/opt/: ccdi-shutdown  ccdi-start  init-gpio
