[package]
name = "ccdi-common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"

nanocv = { git = "https://github.com/viktorchvatal/nanocv.git", features = ["serde"] }

ccdi-imager-interface = { path = "../ccdi-imager-interface" }