[package]
name = "ccdi-image"
version = "0.1.0"
edition = "2021"

[dependencies]

ccdi-common = { path = "../ccdi-common" }

nanocv = { git = "https://github.com/viktorchvatal/nanocv.git", features = ["serde"] }

[dependencies.plotters]
version = "0.3.5"
default-features = false
features = ["bitmap_backend", "line_series"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["bmp"]