[package]
name = "ccdi-tool-enhance-oiii"
version = "0.1.0"
authors = ["vchvatal"]
edition = "2021"

[dependencies]
fitsio = "0.21.2"
itertools = "0.11.0"
chrono = "0.4.26"
simplelog = "0.12.1"
log = "0.4.20"
clap = { version = "4.4.11", features = ["derive"] }

ccdi-common = { path = "../ccdi-common" }
