[package]
name = "ccdi-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = "0.1.9"
warp = "0.3.4"
futures = "0.3.28"
log = "0.4.17"
bus = "2.4.0"
uuid = "1.3.1"
serde_json = "1"

ccdi-common = { path = "../ccdi-common" }
ccdi-logic = { path = "../ccdi-logic" }